<resources>
    <string name="app_name">School Chimes</string>
    <string name="isPasswordMisMatching">Password Mismatch</string>
    <string name="EnterTheNewPassword">Enter New Password</string>
    <string name="EnterTheConformPassword">Confirm New Password</string>
    <string name="EnterTheMobileNumber">Enter the 10 digit mobile number</string>
    <string name="EnterThePassWord">Enter Password</string>
    <string name="EnterTheOtp">Enter OTP</string>
    <string name="ResetThePassword">Reset password</string>
    <string name="AgreeTermsConditions">Please accept the Terms and Conditions to proceed.</string>
    <string name="thank_you_message">Your feedback matters! Thank you for helping us improve the app experience</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="selected">selected</string>
    <string name="add">ADD</string>
    <string name="lblNotifications">Notifications</string>
    <string name="lblFAQ">FAQ</string>
    <string name="lblContact">Contact Us</string>
    <string name="lblTermsCondition">Terms and Conditions</string>
    <string name="lblChangeLanguage">App Language</string>
    <string name="change_password">Change Password</string>
    <string name="lblReportbug">Report  Bug</string>
    <string name="lblLogout">Logout</string>
    <string name="lblSearch">Search</string>
    <string name="lblProfile">Profile</string>
    <string name="lblContactdetails">Contact details</string>
    <string name="lblAboutstudent">About student</string>
    <string name="lblFamilyDetails">Family Details</string>
    <string name="lblChoosecountry">Choose your country</string>
    <string name="lblIagreetotheTermsandConditions">I agree to the <u>Terms and Conditions</u></string>
    <string name="lblCreateNewPassword">Create New Password</string>
    <string name="lblPrevious">Previous</string>
    <string name="lblMobileNumber">Mobile Number</string>
    <string name="lblPassword">Password</string>
    <string name="lblForgotPassword">Forgot Password ?</string>
    <string name="lblDidntreceive"> Didn\’t receive the verification code?</string>
    <string name="lblValidate">Validate</string>
    <string name="lblChooseyourrole">Choose your role</string>
    <string name="lblLoginteacherparent">Login as Principal or Student</string>
    <string name="lblHome">Home</string>
    <string name="lblHelp">Help</string>
    <string name="lblAttachment">Attachment</string>
    <string name="lblOurCustomerService">Our 24*7 Customer Service.</string>
    <string name="lblWriteus">Write to us at.</string>
    <string name="lblSubmit">Submit</string>
    <string name="lblRateus">Rate us</string>
    <string name="lblHowsatisfied">How Satisfied are you with School Chimes?</string>
    <string name="lblMaybelater">Later</string>
    <string name="lblOthers">Others</string>
    <string name="lblAnyothersuggestions"> Anything else you’d like to suggest? (optional)</string>
    <string name="lblThankYou">Thank You</string>
    <string name="lblBackhome">Go Back</string>
    <string name="lblEntertheBug">Report the issue...</string>
    <string name="lblConfirm">Confirm</string>
    <string name="lblThai">Thai</string>
    <string name="lblHindi">Hindi</string>
    <string name="lblTamil">Tamil</string>
    <string name="lblEnglish">English</string>
    <string name="lblSelectlanguage">Select language</string>
    <string name="lblTamil1">தமிழ்</string>
    <string name="lblThai1">แบบไทย</string>
    <string name="lblHindi1">हिंदी</string>
    <string name="VideoURLnotfound">Video URL not found</string>
    <string name="Video">Video</string>
    <string name="SeeMore">See more..</string>
    <string name="SeeLess">See less</string>
    <string name="LogOut">Are you sure you want to log out?</string>
    <string name="Cancel">Cancel</string>
    <string name="roll_no">Roll No</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="Description">Description</string>
    <string name="Send">Send</string>
    <string name="Create">Create</string>
    <string name="History">History</string>
    <string name="Venue">Venue</string>
    <string name="Optional">(Optional)</string>
    <string name="Start">Start</string>
    <string name="NEXT">NEXT</string>
    <string name="NoticeBoard">Notice Board</string>
    <string name="Title">Title</string>
    <string name="Gender">Gender</string>
    <string name="Dateofbirth">Date of birth</string>
    <string name="Fathername">Father name</string>
    <string name="Assignment">Assignment</string>
    <string name="Catogory">Category</string>
    <string name="Enterdescription">Enter description</string>
    <string name="SubmissionDate">Submission Date</string>
    <string name="AddPhoto">Add Photo</string>
    <string name="ChooseRecipients">Choose Recipients</string>
    <string name="Close">Close</string>
    <string name="Update">Update</string>
    <string name="ToDate">To Date</string>
    <string name="FromDate">From Date</string>
    <string name="AllClasses">All Classes</string>
    <string name="MyClasses">My Classes</string>
    <string name="Filter">Filter</string>
    <string name="View">View</string>
    <string name="Remarks">Remarks</string>
    <string name="Complete">Complete</string>
    <string name="MarkAttendance">Mark Attendance</string>
    <string name="Selectallaspresent">Select all</string>
    <string name="OR">OR</string>
    <string name="Uploadimagepdf">Upload Image/Pdf</string>
    <string name="Meetinglink">Meeting link</string>
    <string name="Reports">Reports</string>
    <string name="TOSTANDARDORSECTION">TO STANDARD OR SECTION</string>
    <string name="HoliDay">Holidays</string>
    <string name="send_to_multiple_school">Send to Multiple Schools</string>
    <string name="select_resipent">Select Recipient</string>
    <string name="choose_your_preferred_school">Choose your School</string>
    <string name="school_selection">School Selection</string>
    <string name="send_to">Send To :</string>
    <string name="send">Send</string>
    <string name="Tap_share_message_everyone_school">Tap "SEND" to share this message with everyone in the school.</string>
    <string name="specific_student">Specific Student</string>
    <string name="admission_no">Admission No</string>
    <string name="role_no">Role No</string>
    <string name="view_details">View Details</string>
    <string name="edit">Edit</string>
    <string name="subject">Subject</string>
    <string name="send_by">Send By</string>
    <string name="view">View</string>
    <string name="submit">Submit</string>
    <string name="present">Present</string>
    <string name="select_certificate">Select Certificate</string>
    <string name="select_urgency_level">Select Urgency Level</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="urgent">Urgent</string>
    <string name="request_certificate">Request Certificate</string>
    <string name="approved">Approved</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="reason">Reason</string>
    <string name="created_on">Created On</string>
    <string name="download">Download</string>
    <string name="select">Select</string>
    <string name="see_more">See More</string>
    <string name="view_marks">View Marks</string>
    <string name="view_progress">View Progress</string>
    <string name="join">Join</string>
    <string name="book_slot">Book Slot</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="question_will_appear_here">Your question will appear here</string>
    <string name="play_now">Play Now</string>
    <string name="online_quiz">Online Quiz</string>
    <string name="_0_of_500">0 of 500</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_date">Select Date</string>
    <string name="full_day">Full Day</string>
    <string name="half_day">Half Day</string>
    <string name="schedule_call">Schedule Call</string>
    <string name="text">Text</string>
    <string name="total">Total</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="date">Date</string>
    <string name="sms">SMS</string>
    <string name="your_password_has_been_securely_stored_and_encrypted_for_protection_for_security_reasons_it_cannot_be_displayed_in_plain_text">Your password has been securely stored and encrypted for protection. For security reasons, it cannot be displayed in plain text.</string>
    <string name="_00_00">00:00</string>
    <string name="if_you_don_t_recive_the_otp_please_contact_any_of_the_below_number">If you don’t receive the OTP, please contact any of the numbers below.</string>
    <string name="contact_us">Call Us?</string>
    <string name="_00000_00000">00000-00000</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="star">**********</string>
    <string name="logintext">Login</string>
    <string name="see_less">see less</string>
    <string name="academic_year">Academic Year</string>
    <string name="confirmation">Confirmation</string>
    <string name="selected_target_1">Selected target :</string>
    <string name="are_you_sure_want_to_send_this_message">Are you sure you want to send this message?</string>
    <string name="yes_send">Yes, Send</string>
    <string name="absent">Absent</string>
    <string name="network_speed">Network Speed</string>
    <string name="download_speed">Download Speed: --</string>
    <string name="upload_speed">Upload Speed: --</string>
    <string name="please_save_contact_to_avoid_spam_calls">Please save contact to avoid spam calls</string>
    <string name="save_contacts">Save Contacts?</string>
    <string name="proceed_to_save_contacts">Proceed to save contacts</string>
    <string name="OD">OD</string>
    <string name="not_taken">Not Taken</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="late_comer">Late Comer</string>
    <string name="holiday2">Holiday</string>
    <string name="fn_present_an_absent">FN Present - AN Absent</string>
    <string name="fn_present_an_od">FN Present - AN OD</string>
    <string name="fn_present_an_late_comer">FN Present - AN Late Comer</string>
    <string name="fn_present_an_not_taken">FN Present - AN Not Taken</string>
    <string name="fn_absent_an_present">FN Absent - AN Present</string>
    <string name="fn_absent_an_od">FN Absent - AN OD</string>
    <string name="fn_absent_an_late_comer">FN Absent - AN Late Comer</string>
    <string name="fn_absent_an_not_taken">FN Absent - AN Not Taken</string>
    <string name="fn_late_comer_an_present">FN Late Comer - AN Present</string>
    <string name="fn_late_comer_an_absent">FN Late Comer - AN Absent</string>
    <string name="fn_late_comer_an_od">FN Late Comer - AN OD</string>
    <string name="fn_late_comer_an_not_taken">FN Late Comer - AN Not Taken</string>
    <string name="fn_not_taken_an_present">FN Not Taken - AN Present</string>
    <string name="fn_not_taken_an_absent">FN Not Taken - AN Absent</string>
    <string name="fn_not_taken_an_od">FN Not Taken - AN OD</string>
    <string name="fn_not_taken_an_late_comer">FN Not Taken - AN Late Comer</string>
    <string name="fn_od_an_present">FN OD - AN Present</string>
    <string name="fn_od_an_absent">FN OD - AN Absent</string>
    <string name="fn_od_an_late_comer">FN OD - AN Late Comer</string>
    <string name="fn_od_an_not_taken">FN OD - AN Not Taken</string>
    <string name="acknowledge_concern">Acknowledge Concern</string>
    <string name="add_a_short_note_before_acknowledging_this_concern">Add a short note before acknowledging this concern</string>
    <string name="enter_acknowledgement_description">Enter acknowledgement description</string>
</resources>