<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_white_rounded"
    android:orientation="vertical"
    android:padding="@dimen/twenty">

    <TextView
        android:id="@+id/lblDialogTitle"
        style="@style/CustomTextStylePoppinsBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acknowledge_concern"
        android:textColor="@color/black"
        android:textSize="@dimen/sixteen_sp" />

    <TextView
        android:id="@+id/lblDialogSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four"
        android:text="@string/add_a_short_note_before_acknowledging_this_concern"
        android:textColor="@color/grey"
        android:textSize="@dimen/twele_sp" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginTop="@dimen/sixteen"
        android:background="@drawable/bg_edittext_rounded"
        android:gravity="top|start"
        android:hint="@string/enter_acknowledgement_description"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="4"
        android:maxLines="6"
        android:padding="@dimen/twele"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/thirteen_sp"
        tools:text="" />

    <TextView
        android:id="@+id/lblDescriptionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four"
        android:text="Description is required"
        android:textColor="#E14545"
        android:textSize="@dimen/eleven_sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            style="@style/CustomTextStylePoppinsBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/six"
            android:layout_weight="1"
            android:background="@drawable/bg_button_grey_outline"
            android:gravity="center"
            android:paddingTop="@dimen/ten"
            android:paddingBottom="@dimen/ten"
            android:text="@string/Cancel"
            android:textColor="@color/grey_color"
            android:textSize="@dimen/thirteen_sp" />

        <TextView
            android:id="@+id/btnSubmit"
            style="@style/CustomTextStylePoppinsBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/six"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue"
            android:gravity="center"
            android:paddingTop="@dimen/ten"
            android:paddingBottom="@dimen/ten"
            android:text="@string/lblSubmit"
            android:textColor="@color/white"
            android:textSize="@dimen/thirteen_sp" />

    </LinearLayout>

</LinearLayout>