<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/fourty_five"
    android:layout_marginTop="@dimen/ten"
    android:layout_marginEnd="@dimen/fourty_five"
    android:background="@drawable/rect_white_light_radious"
    android:orientation="vertical"
    android:paddingBottom="@dimen/ten">

    <TextView
        android:id="@+id/alertTitle"
        style="@style/CustomTextStylePoppinsBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen"
        android:gravity="center"
        android:text="@string/confirmation"
        android:textSize="@dimen/sixteen_sp" />

    <TextView
        android:id="@+id/lblSelectTarget"
        style="@style/CustomTextStylePoppinsRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/selected_target_1"
        android:textColor="@color/light_gray_4"
        android:textSize="@dimen/fourteen_sp" />

    <TextView
        android:id="@+id/alertMessage"
        style="@style/CustomTextStylePoppinsRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/fifteen_sp"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginEnd="@dimen/fifteen"
        android:gravity="center"
        android:text="@string/are_you_sure_want_to_send_this_message"
        android:textColor="@color/light_gray_4"
        android:textSize="@dimen/fourteen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/point_five"
        android:layout_marginTop="@dimen/twenty"
        android:background="@color/mild_grey2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_five"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/ten"
        android:weightSum="3">

        <TextView
            android:id="@+id/btnCancel"
            style="@style/CustomTextStylePoppinsBold"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/navi_blue2" />

        <View
            android:layout_width="@dimen/one"
            android:layout_height="match_parent"
            android:background="@color/mild_grey2" />

        <TextView
            android:id="@+id/btnLater"
            style="@style/CustomTextStylePoppinsBold"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/navi_blue2" />

        <View
            android:layout_width="@dimen/one"
            android:layout_height="match_parent"
            android:background="@color/mild_grey2" />

        <TextView
            android:id="@+id/lblAddnow"
            style="@style/CustomTextStylePoppinsBold"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes_send"
            android:textColor="@color/navi_blue2" />
    </LinearLayout>

</LinearLayout>
