<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/fourty_five"
    android:layout_marginTop="@dimen/ten"
    android:layout_marginEnd="@dimen/fourty_five"
    android:background="@drawable/rect_white_light_radious"
    android:orientation="vertical"
    android:paddingBottom="@dimen/ten"
    >

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifteen"
        android:gravity="center"
        style="@style/CustomTextStylePoppinsBold"
        android:text="@string/confirmation"
        android:textSize="@dimen/eighteen_sp"
        />


    <TextView
        android:id="@+id/alertMessage"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/fifteen"
        android:layout_marginStart="@dimen/fifteen_sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        style="@style/CustomTextStylePoppinsRegular"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/are_you_sure_want_to_send_this_message"
        android:textColor="@color/light_gray_4"
        android:textSize="@dimen/fourteen_sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/point_five"
        android:layout_marginTop="@dimen/twenty"
        android:background="@color/mild_grey2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/ten"
       >

        <TextView
            android:paddingVertical="@dimen/ten"
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomTextStylePoppinsBold"
            android:gravity="center"
            android:background="@drawable/rect_white_fill_orange_stroke"
            android:text="@string/Cancel"
            android:textColor="@color/dark_bg_orange_2" />


        <TextView
            android:layout_marginTop="@dimen/ten"
            android:paddingVertical="@dimen/ten"
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/rect_orange_bg"
            style="@style/CustomTextStylePoppinsBold"
            android:text="@string/yes_send"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
